Fix syntax error and redundant calls or declarations